# symmetric-polynomials

./: .gitignore  LICENSE  README.md  symmetric-polynomials.cabal
src/Math/Algebra/Polynomial/Symmetric/: Bases.hs  Involution.hs  Newton.hs  ScalarProd.hs  Truncate.hs  Types.hs
src/Math/Algebra/Polynomial/Symmetric/Bases/: DualE.hs  E.hs  H.hs  M.hs  P.hs  S.hs  Shared.hs
src/Math/Algebra/Polynomial/Symmetric/Helpers/: Determinant.hs  Misc.hs  Tables.hs
