Name:                symmetric-polynomials
Version:             0.1
Synopsis:            The ring of symmetric polynomials
Description:         Symmetric polynomials in different bases, and 
                     conversions between them.
License:             BSD3
License-file:        LICENSE
Author:              Balazs Komuves
Copyright:           (c) 2018-2019 Balazs Komuves
Maintainer:          bkomuves (plus) hackage (at) gmail (dot) com
Homepage:            http://moire.be/haskell/
Stability:           Experimental
Category:            Math
Tested-With:         GHC == 8.6.5
Cabal-Version:       >= 1.18
Build-Type:          Simple

--------------------------------------------------------------------------------

Library

  Build-Depends:       base >= 4 && < 5, 
                       array >= 0.5, containers >= 0.5, random, transformers,
                       combinat >= 0.2.9.0, polynomial-algebra >= 0.1

  Exposed-Modules:
                       -- Math.Algebra.Polynomial.Symmetric                      
                       Math.Algebra.Polynomial.Symmetric.Types                       
                       -- Math.Algebra.Polynomial.Symmetric.Classes
                       -- Math.Algebra.Polynomial.Symmetric.LambdaRing
                       Math.Algebra.Polynomial.Symmetric.Bases
                       Math.Algebra.Polynomial.Symmetric.Bases.Shared
                       Math.Algebra.Polynomial.Symmetric.Bases.E
                       Math.Algebra.Polynomial.Symmetric.Bases.DualE
                       Math.Algebra.Polynomial.Symmetric.Bases.H
                       Math.Algebra.Polynomial.Symmetric.Bases.P
                       Math.Algebra.Polynomial.Symmetric.Bases.S
                       Math.Algebra.Polynomial.Symmetric.Bases.M
                       -- Math.Algebra.Polynomial.Symmetric.Bases.F
                       Math.Algebra.Polynomial.Symmetric.ScalarProd
                       Math.Algebra.Polynomial.Symmetric.Involution
                       Math.Algebra.Polynomial.Symmetric.Newton
                       Math.Algebra.Polynomial.Symmetric.Truncate
                       -- Math.Algebra.Polynomial.Symmetric.Specialization
                       Math.Algebra.Polynomial.Symmetric.Helpers.Determinant
                       Math.Algebra.Polynomial.Symmetric.Helpers.Tables
                       Math.Algebra.Polynomial.Symmetric.Helpers.Misc

  Default-Extensions:  CPP, BangPatterns
  Other-Extensions:    MultiParamTypeClasses, ScopedTypeVariables, 
                       GeneralizedNewtypeDeriving

  Default-Language:    Haskell2010

  Hs-Source-Dirs:      src

  ghc-options:         -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-unused-imports
    
--------------------------------------------------------------------------------
    
test-suite test

  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             testSuite.hs
  
  build-depends:       base >= 4 && < 5, 
                       array >= 0.5, containers >= 0.5,
                       tasty >= 0.11, tasty-hunit >= 0.9, 
                       tasty-quickcheck >= 0.9, QuickCheck >= 2.6,
                       combinat >= 0.2.9.0, polynomial-algebra >= 0.1,
                       symmetric-polynomials >= 0.1
                       
  other-modules:       Tests.Common
                       Tests.Conversion

--------------------------------------------------------------------------------

